export, pageSize management, global search, remove bootstrap and font-awesome dependencies

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link href="http://cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="luyeTable.less" rel="stylesheet" type="text/less">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -12,6 +13,7 @@
 <script src="http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <script src="http://cdn.bootcss.com/lodash.js/4.17.4/lodash.js"></script>
 <script src="http://cdn.bootcss.com/less.js/3.0.0-pre.4/less.min.js"></script>
+
 <script src="luyeTable.js"></script>
 <script src="data.js"></script>
 <script>
